unpackaged/main/default/objects/project_cloud__Project_Sub_Phase__c/project_cloud__Project_Sub_Phase__c.object-meta.xml
<CustomObject>
    <description>Sub-Phases that exist within a project phase, each phase consists of a series of project tasks or other sub-phases grouping them together.</description>
    <label>Project Sub-Phase</label>
    <nameField>
        <label>Project Sub-Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sub-Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>