unpackaged/main/default/objects/project_cloud__Project_Sub_Phase__c/fields/project_cloud__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating which sub phase this sub phase was cloned from</description>
    <inlineHelpText>Shows the Name of a sub phase that the sub phase was cloned from.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>project_cloud__Project_Sub_Phase__c</referenceTo>
    <relationshipLabel>Cloned Project Sub Phases</relationshipLabel>
    <relationshipName>Cloned_Project_Sub_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>