unpackaged/main/default/objects/project_cloud__Project_Sub_Phase__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <description>Rollup summary of the latest end date of the all the Project Tasks in this Project Sub-Phase</description>
    <inlineHelpText>The calculated end date of the project phase based on the end date of the last project task within the project sub-phase</inlineHelpText>
    <label>End (Rollup)</label>
    <type>Date</type>
</CustomField>