unpackaged/main/default/objects/project_cloud__Project_Sub_Phase__c/fields/project_cloud__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase__c</fullName>
    <description>The Project Phase that the Project Sub-Phase belongs to</description>
    <inlineHelpText>The Project Phase that the Sub-Phase belongs to.</inlineHelpText>
    <label>Project Phase</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Project Sub_Phases</relationshipLabel>
    <relationshipName>Project_Sub_Phases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>