unpackaged/main/default/objects/project_cloud__Project_Sub_Phase__c/fields/project_cloud__Project_Sub_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Sub_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project Sub-Phase that the Project Sub-Phase belongs to</description>
    <inlineHelpText>The Project Sub-Phase that the Sub-Phase belongs to.</inlineHelpText>
    <label>Parent Sub-Phase</label>
    <referenceTo>project_cloud__Project_Sub_Phase__c</referenceTo>
    <relationshipLabel>Project Sub Phases</relationshipLabel>
    <relationshipName>Project_Sub_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>