unpackaged/main/default/objects/project_cloud__Project_Sub_Phase__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <description>Rollup summary of the earliest start date of the all the Project Tasks in this Project Sub-Phase</description>
    <inlineHelpText>The calculated start date of the project phase based on the start date of the earliest project task within the project sub-phase</inlineHelpText>
    <label>Start (Rollup)</label>
    <type>Date</type>
</CustomField>